--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="buttons">
           <a href="#">Contact me</a>
-          <a href="#">Download CV</a>
+          <a href="Shrey's Resume.pdf">Download CV</a>
         </div>
       </div>
     </div>
