--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div class="navbar-menu">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#strengts">Strengths</a>
-        <a href="#education">Projects</a>
+        <a href="#strengths">Strengths</a>
+        <a href="#projects">Projects</a>
         <a href="#achievements">Acheivements</a>
         <a href="#contact">Contact</a>
       </div>
@@ -159,8 +159,8 @@
     </div>
   </section>
 
-  <!-- Education -->
-  <section id="education">
+  <!-- Projects -->
+  <section id="projects">
     <div class="inner-width">
       <h1 class="section-title">Projects</h1>
       <div class="time-line">
