--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <!-- Services -->
+  <!-- Strengths -->
   <section id="strengths" class="dark">
     <div class="inner-width">
       <h1 class="section-title">Strengths</h1>
