--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://www.facebook.com/shrey.banugariya" class="fab fa-facebook-f"></a>
         </div>
         <div class="buttons">
-          <a href="#">Contact me</a>
+          <a href="#contact">Contact me</a>
           <a href="Shrey's Resume.pdf">Download CV</a>
         </div>
       </div>
