--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h3>
             <span>Python Programing</span>
             <span>Back-End Development</span>
-            <span>Web-Design</span>
+            <span>Front End Developer</span>
           </h3>
           <p>
             With the quest to make this world a beautiful place to live in, I want to learn things that make other things possible and that lead me to learn about developemnt and I am completely enjoying my journey in this logical world of binary.
@@ -133,7 +133,7 @@
         <div class="service">
           <i class="icon fas fa-comments"></i>
           <h4>Oral and Written Communication</h4>
-          <p>Have Participated in number of group dicussions and speach competitions. </p>
+          <p>Have Participated in number of group dicussions and speech competitions. </p>
         </div>
 
         <div class="service">
@@ -177,7 +177,7 @@
         </div>
 
         <div class="block">
-          <h3>Live Ploting of Covid Case on Indain Map</h3>
+          <h3>Live Ploting of Covid Case on Indian Map</h3>
           <h4>Mapbox, Python(Flask), HTML, CSS</h4>
           
         </div>
