--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="service">
           <i class="icon fas fa-database"></i>
           <h4>Team Building and Team Work</h4>
-          <p>Working and knwoing different ideas and learning new things makes challanges fun</p>
+          <p>Working and knowing different ideas and learning new things makes challenges fun</p>
         </div>
 
         <div class="service">
