--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
       </div>
 
-      <form action="#" class="contact-form">
+      <form action="https://formspree.io/mjvaqwqq" class="contact-form" method="POST">
         <input type="text" class="nameZone" placeholder="Your Full Name">
         <input type="email" class="emailZone" placeholder="Your Email">
         <input type="text" class="subjectZone" placeholder="Subject">
