--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
       </div>
 
       <form action="https://formspree.io/mjvaqwqq" class="contact-form" method="POST">
-        <input type="text" class="nameZone" placeholder="Your Full Name">
-        <input type="email" class="emailZone" placeholder="Your Email">
-        <input type="text" class="subjectZone" placeholder="Subject">
-        <textarea class="messageZone" placeholder="Message"></textarea>
+        <input type="text" name="name"class="nameZone" placeholder="Your Full Name">
+        <input type="email" name="email"class="emailZone" placeholder="Your Email">
+        <input type="text" name="subject"class="subjectZone" placeholder="Subject">
+        <textarea class="messageZone" name="message" placeholder="Message"></textarea>
         <input type="submit" value="Send Message" class="btn">
       </form>
     </div>
