--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span></span>
       </button>
       <div class="navbar-menu">
-        <a href="#home">Home</a>
+        <a href="#home" data-toggle="collpse" data-target=".navbar-menu">Home</a>
         <a href="#about">About</a>
         <a href="#strengths">Strengths</a>
         <a href="#projects">Projects</a>
