--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!-- =====Favicon==== -->
-        <link rel="icon" href="img/favicon-32x32.png" type="image/png">
+        <link rel="icon" href="img/favicon.ico" type="image/png">
 
         <title data-react-helmet="itemprop,lang" itemprop="name" lang="en">Shrey Banugaria| Web Developer</title>
         <meta name="description" content="Shrey Banugaria is a Web developer based in Gujarat, IN who specializes in building exceptional websites, applications, and everything in between. He also accepts Freelace projects for all websites" data-react-helmet="true">
