--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <linkhref="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&family=Lobster&display=swap"
         rel="stylesheet"/>
 
-        <title data-react-helmet="itemprop,lang" itemprop="name" lang="en">Shrey Banugaria| Web Developer</title>
+        <title data-react-helmet="itemprop,lang" itemprop="name" lang="en">Shrey Banugaria | Full Stack Web Developer</title>
         <meta name="description" content="Shrey Banugaria is a Web developer based in Gujarat, IN who specializes in building exceptional websites, applications, and everything in between. He also accepts Freelace projects for all websites" data-react-helmet="true">
         <meta name="keywords" content="Shrey Banugaria, Shrey Banugariya, Shrey, Banugaria, Banugariya, Full Stack Web Developer, Full Stack, Web, WebApp, ShreyBanugaria, ShreyBanugariya, Freelance Web Developer, Website developer, Web Apps, Freelancer, Freelance for Webdevelopement, Web Development, back-end engineer, web developer, javascript, india, Freelancers in India, Web Dev Freelancers, Shrey Web Dev, Portfolio, Shrey's Portfolio, Shrey Banugaria Full Stack Web Developer, Freelance Web Developer in Gujarat, Freelace Web Developer in India, Wordpress Developer India, Web Developer India, Nodejs Developer, Django Developer, Website Developer" data-react-helmet="true">
-        <meta property="og:title" content="Shrey Banugaria| Web Developer | Full Stack Web Developer" data-react-helmet="true">
+        <meta property="og:title" content="Shrey Banugaria | Full Stack Web Developer" data-react-helmet="true">
         <meta property="og:description" content="Shrey Banugaria is a Web developer based in Gujarat, IN who specializes in building exceptional websites, applications, and everything in between. He also accepts Freelace projects for all websites" data-react-helmet="true">
         <meta property="og:type" content="website" data-react-helmet="true">
         <meta property="og:site_name" content="Shrey Banugaria| Web Developer | Full Stack Web Developer" data-react-helmet="true">
-        <meta itemprop="name" content="Shrey Banugaria| Web Developer | Full Stack Web Developer" data-react-helmet="true">
+        <meta itemprop="name" content="Shrey Banugaria | Full Stack Web Developer" data-react-helmet="true">
         <meta itemprop="description" content="Shrey Banugaria is a Web developer based in Gujarat, IN. He is specialized in building exceptional eCommerce websites, Business Web Sites, and everything in between. He accepts all kind of Web App, Wordpress, Freelance projects" data-react-helmet="true">
-        <meta name="twitter:title" content="Shrey Banugaria| Web Developer" data-react-helmet="true">
+        <meta name="twitter:title" content="Shrey Banugaria| Full Stack Web Developer" data-react-helmet="true">
         <meta name="twitter:description" content="Shrey Banugaria is a Web developer based in Gujarat, IN. He is specialized in building exceptional eCommerce websites, Business Web Sites, and everything in between. He accepts all kind of Web App, Wordpress, Freelance projects" data-react-helmet="true">
-        <meta name="twitter:image:alt" content="Shrey Banugaria | Web Developer | Full Stack Web Developer " data-react-helmet="true">
+        <meta name="twitter:image:alt" content="Shrey Banugaria  | Full Stack Web Developer " data-react-helmet="true">
 
         <!--====== CSS ====== -->
         <link rel="stylesheet" href="css/style.css">
