Updated Resume, Menu CSS and Menu Content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Certificates</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blogs</span></a></li>
@@ -57,7 +56,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Shrey Banugaria</span></h1>
 			            <h2 class="mb-4">A Backend Developer</h2>
-			            <p><a href="https://www.linkedin.com/in/shrey-banugaria/" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="https://www.linkedin.com/in/shrey-banugaria/" class="btn btn-primary py-3 px-4">Hire Me</a> <a href="./ShreyBanugaria_Software_Developer.pdf" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -89,7 +88,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="12">0</span>
+	                <span class="number" data-number="13">1</span>
 	                <span>Projects Worked On</span>
                 </p>
                 <p><a href="ShreyBanugaria_Software_Developer.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
@@ -459,8 +458,8 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available for freelancing</span> </h2>
-						<p class="mb-0"><a href="https://www.linkedin.com/in/shrey-banugaria/" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<h2>I'm <span>Available for your online bussiness requirement</span></h2> </h2>
+						<p class="mb-0"><a href="https://www.linkedin.com/in/shrey-banugaria/" class="btn btn-primary py-3 px-5">Lets connect</a></p>
 					</div>
 				</div>
 			</div>
