Updated Meta Tags for SEO, added Favicon images, updated content in the HTML

--- a/index.html
+++ b/index.html
@@ -3,6 +3,47 @@
   <head>
     <title>Shrey Banugaria - Sr. Nodejs Developer</title>
     <meta charset="utf-8">
+
+	<!-- Meta description for SEO -->
+    <meta name="description" content="An experienced Node.js Developer specializing in backend applications, third-party integrations, payment gateways, and more.">
+
+    <!-- Meta keywords for SEO -->
+    <meta name="keywords" content="Node.js Developer, Backend Developer, API Integration, Payment Gateway, Shrey Banugaria, Web Development, Software Engineer">
+
+	<!-- Author meta tag -->
+	<meta name="author" content="Shrey Banugaria">
+
+	<!-- Open Graph tags for social media -->
+    <meta property="og:title" content="Shrey Banugaria - Sr. Node.js Developer">
+    <meta property="og:description" content="An experienced Node.js Developer specializing in backend applications, third-party integrations, payment gateways, and more.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://shreybanugariya.github.io/">
+    <meta property="og:image" content="https://github.com/Shreybanugariya/Shreybanugariya.github.io/blob/master/images/Shrey_bg1.png">
+
+	<!-- Twitter Card tags for social media -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Shrey Banugaria - Sr. Node.js Developer">
+	<meta name="twitter:description" content="An experienced Node.js Developer specializing in backend applications, third-party integrations, payment gateways, and more.">
+	<meta name="twitter:image" content="https://github.com/Shreybanugariya/Shreybanugariya.github.io/blob/master/images/Shrey_bg1.png">
+
+	    <!-- Structured Data for better SEO -->
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Person",
+			  "name": "Shrey Banugaria",
+			  "url": "https://shreybanugariya.github.io/",
+			  "image": "https://github.com/Shreybanugariya/Shreybanugariya.github.io/blob/master/images/Shrey_bg1.png",
+			  "jobTitle": "Sr. Node.js Developer",
+			  "description": "An experienced Node.js Developer specializing in backend applications, third-party integrations, payment gateways, and more.",
+			  "sameAs": [
+				"https://www.linkedin.com/in/shrey-banugaria/",
+				"https://github.com/shreybanugariya"
+			  ]
+			}
+			</script>
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -21,9 +62,16 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-	  
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
@@ -55,8 +103,8 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Shrey Banugaria</span></h1>
-			            <h2 class="mb-4">A Backend Developer</h2>
-			            <p><a href="https://www.linkedin.com/in/shrey-banugaria/" class="btn btn-primary py-3 px-4">Hire Me</a> <a href="./ShreyBanugaria_Software_Developer.pdf" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
+			            <h2 class="mb-4">A Backend Nodejs Developer</h2>
+			            <p><a href="https://www.linkedin.com/in/shrey-banugaria/" class="btn btn-primary py-3 px-4 mr-3">Hire Me</a> <a href="./ShreyBanugaria_Software_Developer.pdf" class="btn btn-white btn-outline-white py-3 px-4">Resume</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -127,6 +175,12 @@
     					<h2>Fovex Ventrues</h2>
     					<span class="position">Full Stack Developer</span>
     					<p class="mt-4">Created E-Commerce website for a Startup</p>
+    				</div>
+					<div class="resume-wrap ftco-animate">
+    					<span class="date">2019-2021</span>
+    					<h2>Freelance</h2>
+    					<span class="position">Tech Content Writter and Copy Writter</span>
+    					<p class="mt-4">Served as a Content Writer, Copy Writer, and Editor for International Business</p>
     				</div>
     			</div>
     		</div>
@@ -458,7 +512,7 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available for your online bussiness requirement</span></h2> </h2>
+						<h2>I'm <span>Available for online Business Requirements</span></h2> </h2>
 						<p class="mb-0"><a href="https://www.linkedin.com/in/shrey-banugaria/" class="btn btn-primary py-3 px-5">Lets connect</a></p>
 					</div>
 				</div>
